src/objects/Energy_Audit__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>simple description</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Energy Audit</relationshipLabel>
        <relationshipName>Energy_Audit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Energy_Usage_kWh__c</fullName>
        <label>Annual Energy Usage kWh</label>
        <precision>11</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Audit_Notes__c</fullName>
        <label>Audit Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Average_Annual_Electric_Cost__c</fullName>
        <label>Average Annual Electric Cost</label>
        <precision>11</precision>
        <scale>10</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Installation__c</fullName>
        <label>Type of Installation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>field1__c</fullName>
        <label>field1</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>field2_email__c</fullName>
        <label>field2_email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>field3_name__c</fullName>
        <label>field3_name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>field4_phone__c</fullName>
        <label>field4_phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>field5_textarea__c</fullName>
        <label>field5_textarea</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Energy Audit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Energy Audit  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Energy Audit</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>